# GoStrap

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: cicd.yml  publish.yml
debian/: control  genchangelog  rules
src/volexity/gostrap/: __init__.py  cli.py  sample_generator.py
src/volexity/gostrap/models/: __init__.py  arch_types.py  cli_arguments.py  platform_types.py
tests/: __init__.py  test_gostrap.py
