[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gostrap"
dynamic = ["version"]
description = "A tool simplifying the generaton of clean GO sample with a specified set of included libraries."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "Killian Raimbaud", email = "kraimbaud@volexity.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "argparse~=1.4.0",
  "gittoolfetcher~=1.0.0",
  "multiprocess~=0.70.17",
  "yaspin~=3.1.0",
]

[project.scripts]
gostrap = "volexity.gostrap.cli:run_cli"

[project.urls]
Documentation = "https://gitlab.research.volexity.com/threat-intel/gostrap/-/blob/master/README.md"
Issues = "https://gitlab.research.volexity.com/threat-intel/gostrap/-/issues"
Source = "https://gitlab.research.volexity.com/threat-intel/gostrap"

[envs.hatch-static-analysis]
config-path = "none"

[tool.coverage.run]
source_pkgs = ["volexity.gostrap"]
branch = true
parallel = true
omit = [
  "src/volexity/gostrap/_version.py",
]

[tool.coverage.paths]
gostrap = ["src/volexity/gostrap", "*/gostrap/src/volexity/gostrap"]
tests = ["tests", "*/gostrap.tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/volexity/gostrap/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/volexity"]

[tool.hatch.envs.default]
extra-dependencies = [
  "mypy~=1.13",

  "types-requests",
  "types-tqdm",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/volexity/gostrap tests}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"
dependencies = ["ruff~=0.9"]

[tool.hatch.envs.hatch-test]
extra-dependencies = []

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
explicit_package_bases = true
files = ["src"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "smda.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C901",
  "COM812",
  "D105",
  "D107",
  "ERA001",
  "FBT001",
  "FBT002",
  "FIX001",
  "FIX002",
  "FIX003",
  "FIX004",
  "G004",
  "ISC001",
  "PLR0912",
  "PLR0913",
  "PTH123",
  "TD001",
  "TD002",
  "TD003",
]
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
"**/_version.py" = [
  "D100",
  "SIM108"
]
"**/tests/**/*" = [
  "D100",
  "S"
]

[tool.ruff.lint.isort]
known-first-party = ["volexity.gostrap"]
